@@ -15,5 +15,8 @@
     <input class="hiddenfield" size="40" type="hidden" value="hidden 2"/>
     <input class="hiddenfield" size="40" type="hidden" value="hidden 3"/>
 
+    <textarea rows="2" cols="20" class="textarea">textarea 1</textarea>
+    <textarea rows="2" cols="20" class="textarea">textarea 2</textarea>
+    <textarea rows="2" cols="20" class="textarea">textarea 3</textarea>
   </body>
 </html>
